; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netkey/extr_key.c_key_start_timehandler.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netkey/extr_key.c_key_start_timehandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sadb_mutex = common dso_local global i32 0, align 4
@LCK_MTX_ASSERT_OWNED = common dso_local global i32 0, align 4
@key_timehandler_running = common dso_local global i32 0, align 4
@key_timehandler = common dso_local global i64 0, align 8
@hz = common dso_local global i32 0, align 4
@ipsec_bypass = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @key_start_timehandler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @key_start_timehandler() #0 {
  %1 = load i32, i32* @sadb_mutex, align 4
  %2 = load i32, i32* @LCK_MTX_ASSERT_OWNED, align 4
  %3 = call i32 @LCK_MTX_ASSERT(i32 %1, i32 %2)
  %4 = load i32, i32* @key_timehandler_running, align 4
  %5 = icmp eq i32 %4, 0
  br i1 %5, label %6, label %11

6:                                                ; preds = %0
  store i32 1, i32* @key_timehandler_running, align 4
  %7 = load i64, i64* @key_timehandler, align 8
  %8 = inttoptr i64 %7 to i8*
  %9 = load i32, i32* @hz, align 4
  %10 = call i32 @timeout(i8* %8, i8* null, i32 %9)
  br label %11

11:                                               ; preds = %6, %0
  %12 = load i64, i64* @ipsec_bypass, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %11
  store i64 0, i64* @ipsec_bypass, align 8
  br label %15

15:                                               ; preds = %14, %11
  ret void
}

declare dso_local i32 @LCK_MTX_ASSERT(i32, i32) #1

declare dso_local i32 @timeout(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
